github username update and some hidden fun 🎉

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>BMc</title>
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   </head>
@@ -12,7 +13,7 @@
     </header>
     <div id="links" class="findme">
       <h1>Where to find me</h1>
-      <div class="links"><a href="https://twitter.com/@bcm08gt"><i class="fa fa-twitter"></i></a><a href="https://google.com/+BrandonMcAnsh"><i class="fa fa-google-plus"></i></a><a href="https://github.com/BMc08GT"><i class="fa fa-github"></i></a><a href="https://www.linkedin.com/pub/brandon-mcansh/5b/719/57b"><i class="fa fa-linkedin"></i></a></div>
+      <div class="links"><a href="https://twitter.com/@bmc08gt"><i class="fa fa-twitter"></i></a><a href="https://google.com/+BrandonMcAnsh"><i class="fa fa-google-plus"></i></a><a href="https://github.com/bmc08gt"><i class="fa fa-github"></i></a><a href="https://www.linkedin.com/pub/brandon-mcansh/5b/719/57b"><i class="fa fa-linkedin"></i></a></div>
     </div>
     <footer>
       <p>Copyright &copy; 2015 All Rights Reserved.</p>
