metadata, locally hosted font awesome, begun on work/portfolio page

--- a/work/index.html
+++ b/work/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>BMc</title>
+    <title>BMc | Work</title>
     <link rel="icon" sizes="any" mask="" href="img/somesvg.svg">
     <meta name="theme-color" content="#4078c0">
     <link rel="shortcut icon" href="img/favicon.png">
@@ -15,18 +15,5 @@
     <meta name="twitter:description" content="SOMETHING CAN GO HERE">
     <meta name="twitter:image" content="img/avatar.jpg"><!-- website made by @mcansh on github -->
   </head>
-  <body>
-    <header>
-      <div class="profile"></div>
-      <h1>Brandon McAnsh</h1>
-      <h2>Lorem ipsum dolor sit amet.</h2>
-    </header>
-    <div id="links" class="findme">
-      <h1>Where to find me</h1>
-      <div class="links"><a href="https://twitter.com/@bmc08gt"><i class="fa fa-twitter"></i></a><a href="https://google.com/+BrandonMcAnsh"><i class="fa fa-google-plus"></i></a><a href="https://github.com/bmc08gt"><i class="fa fa-github"></i></a><a href="https://www.linkedin.com/pub/brandon-mcansh/5b/719/57b"><i class="fa fa-linkedin"></i></a></div>
-    </div>
-    <footer>
-      <p>Copyright &copy; 2015 All Rights Reserved.</p>
-    </footer>
-  </body>
+  <body></body>
 </html>
