--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="profile"></div>
       <h1>Brandon McAnsh</h1>
-      <h2>Lorem ipsum dolor sit amet.</h2>
+      <h2>AOKP // CM // Apps // Firmware</h2>
     </header>
     <div id="links" class="findme">
       <h1>Where to find me</h1>
