some updates to work page :octocat:

--- a/work/index.html
+++ b/work/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <title>BMc | Work</title>
+    <meta charset="utf-8">
     <link rel="icon" sizes="any" mask="" href="img/somesvg.svg">
     <meta name="theme-color" content="#4078c0">
     <link rel="shortcut icon" href="img/favicon.png">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/work.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="author" content="Brandon McAnsh">
     <meta name="description" content="SOMETHING CAN GO HERE">
@@ -15,5 +16,30 @@
     <meta name="twitter:description" content="SOMETHING CAN GO HERE">
     <meta name="twitter:image" content="img/avatar.jpg"><!-- website made by @mcansh on github -->
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div class="backarrow"><a href="../"><i class="material-icons back_arrow">&#xE5C4;</i></a></div>
+        <div class="links"><a href="#aokp">AOKP</a><a href="#cyanogen">CM </a><a href="#apps">Apps </a><a href="#firmware">Firmware</a></div>
+      </nav>
+    </header>
+    <div class="work">
+      <div id="aokp" class="aokp">
+        <h1>AOKP</h1>
+        <div class="aokp-image"></div>
+      </div>
+      <div id="cyanogen" class="cyanogen">
+        <h1>Cyanogen</h1>
+        <div class="cm-image"></div>
+      </div>
+      <div id="apps" class="apps">
+        <h1>Apps</h1>
+        <div class="apps-image"></div>
+      </div>
+      <div id="firmware" class="firmware">
+        <h1>Firmware</h1>
+        <div class="fw-image"></div>
+      </div>
+    </div>
+  </body>
 </html>
