--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>BMc</title>
     <meta charset="utf-8">
     <link rel="icon" sizes="any" mask="" href="img/somesvg.svg">
-    <meta name="theme-color" content="#4078c0">
+    <meta name="theme-color" content="#00796B">
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
