move javascript files to root
Signed-off-by: Logan McAnsh <l.m@loganmcansh.com>

--- a/wearresponses/test.html
+++ b/wearresponses/test.html
@@ -145,13 +145,13 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery-2.2.4.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="../js/clean-blog.min.js"></script>
 
         <!-- Google Analytics -->
     <script>
