--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <footer>
       <p>Copyright &copy; 2016 All Rights Reserved.</p>
     </footer>
+    <script src="js/jquery-2.2.4.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
